Load video sections in playlist responses